Drupal Installation/K8S/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kickstart-dev
  labels:
    name: kickstart-dev
