Drupal Installation/K8S/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kickstart-dev
  name: kickstartportal-service-ingress
spec:
  defaultBackend:
    service:
      name: kickstartportal-svc
      port:
        number: 80
